--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://
-JWT_SECRET=xyz
+MONGO_URI=mongodb+srv://sohinimanne_db_user:47TmvyjjswstULKV@m0.y3yzpjs.mongodb.net/?appName=M0
+JWT_SECRET=nivio_secret_key_123
