--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
